# Leggiero-Library

./: .gitignore  CMakeLists.txt  README.md
Dependent/Android/FreeType/: CMakeLists.txt  source_info.txt
Dependent/Android/OpenSSL/: CMakeLists.txt  source_info.txt
Dependent/Android/OpenSSL/include/openssl/: opensslconf.h
Dependent/Android/cpu_features/: source_info.txt
Dependent/Android/curl/: CMakeLists.txt  source_info.txt
Dependent/Android/libjpeg-turbo/: CMakeLists.txt  source_info.txt
Dependent/Android/libogg/: CMakeLists.txt  source_info.txt
Dependent/Android/libpng/: CMakeLists.txt  source_info.txt
Dependent/Android/libvorbis/: CMakeLists.txt  source_info.txt
Dependent/Android/oboe/: source_info.txt
Dependent/Win-x64/FreeType/: source_info.txt
Dependent/Win-x64/OpenAL/: source_info.txt
Dependent/Win-x64/OpenALSoft/: source_info.txt
Dependent/Win-x64/OpenSSL/: source_info.txt
Dependent/Win-x64/OpenSSL/include/openssl/: opensslconf.h
Dependent/Win-x64/OpenSSL/lib/Debug/: libssl.lib
Dependent/Win-x64/OpenSSL/lib/Release/: libcrypto.lib  libssl.lib
Dependent/Win-x64/PowerVR/: source_info.txt
Dependent/Win-x64/curl/: source_info.txt
Dependent/Win-x64/libjpeg-turbo/: source_info.txt
Dependent/Win-x64/libjpeg-turbo/include/: jconfig.h
Dependent/Win-x64/libjpeg-turbo/libs/: jpeg-static.lib  turbojpeg-static.lib
Dependent/Win-x64/libjpeg-turbo/libs/Debug/: jpeg-static.lib  turbojpeg-static.lib
Dependent/Win-x64/libjpeg-turbo/libs/Release/: jpeg-static.lib  turbojpeg-static.lib
Dependent/Win-x64/libogg/: source_info.txt
Dependent/Win-x64/libogg/libs/Debug/: libogg.lib
Dependent/Win-x64/libogg/libs/Release/: libogg.lib
Dependent/Win-x64/libpng/: source_info.txt
Dependent/Win-x64/libpng/libs/: libpng.lib
Dependent/Win-x64/libvorbis/: source_info.txt
Dependent/Win-x64/libvorbis/libs/Debug/: libvorbis_static.lib  libvorbisfile_static.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
Dependent/Win-x64/libvorbis/libs/Release/: libvorbis_static.lib  libvorbisfile_static.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib
Dependent/Win-x64/pthreads4w/: source_info.txt
Dependent/Win-x64/pthreads4w/libs/: pthreadVCE3.lib  pthreadVCE3d.lib
Dependent/Win-x64/zlib/lib/: zlib.lib
Dependent/iOS/Frameworks/: MetalANGLE-source_info.txt  soft_oal-source_info.txt
Dependent/iOS/Frameworks/MetalANGLE.framework/: Info.plist
Dependent/iOS/Frameworks/soft_oal.framework/: Info.plist  soft_oal
Dependent/iOS/FreeType/: source_info.txt
Dependent/iOS/FreeType/include/freetype/config/: ftconfig.h
Dependent/iOS/OpenSSL/: source_info.txt
Dependent/iOS/OpenSSL/include/openssl/: opensslconf.h
Dependent/iOS/cryptopp/: source_info.txt
Dependent/iOS/cryptopp/include/cryptopp/: pem.h  pem_common.h
Dependent/iOS/libjpeg-turbo/: source_info.txt
Dependent/iOS/libpng/: source_info.txt
Dependent/iOS/oggvorbis/: source_info.txt
LeggieroLib/: CMakeLists.txt  GLES3.h  Leggiero.Library.vcxproj  Leggiero.Library.vcxproj.filters  OpenAL.h
LeggieroLib/AHEasing/: easing.c  source_info.txt
LeggieroLib/LeggieroLib.xcodeproj/: project.pbxproj
LeggieroLib/b64/: decode.h  encode.h  source_info.txt
LeggieroLib/b64/src/: cdecode.c  cencode.c
LeggieroLib/concurrentqueue/: source_info.txt
LeggieroLib/fmt/: source_info.txt
LeggieroLib/fmt/src/: format.cc  os.cc
LeggieroLib/glm/: source_info.txt
LeggieroLib/libpng/: pngusr.h  pngusr_AArch64.h  pngusr_Arm.h  pngusr_WinPC.h  source_info.txt
LeggieroLib/libpng/arm/: arm_init.c
LeggieroLib/minimp3/: minimp3.cpp  source_info.txt
LeggieroLib/readerwriterqueue/: source_info.txt
LeggieroLib/tinyxml2/: source_info.txt
LeggieroLib/utfcpp/: source_info.txt
LeggieroLib/zlib/: source_info.txt
